--- a/.eslintrc
+++ b/.eslintrc
@@ -29,7 +29,7 @@
     "keyword-spacing": [2],
     "eqeqeq": [2],
     "space-before-blocks": [2],
-    "strict": [2],
+    "strict": [2]
   },
   "extends": "eslint:recommended"
 }
