--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,19 +1,20 @@
 stages:
   - lint
 
-eslint:
-  image: node:latest
-  stage: lint
-  script:
+#eslint:
+#  image: node:latest
+#  stage: lint
+#  script:
     # Install ESLint in this docker container
-    - npm install -g eslint
+#    - npm install -g eslint
     # Configure ESLint (will read your .eslintrc file)
-    - eslint --init
+#    - eslint --init
     # Run ESLint
     - eslint js
 
 phpcs:
-  image: texthtml/phpcs
+  image: php:7.1
   stage: lint
   script:
-    - phpcs --standard=./phpcs.ruleset.xml **.php
+    - composer update
+    - composer phpcs
