--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,9 +24,5 @@ phpcs:
 
   before_script:
     # Install composer dependencies
-    - wget https://composer.github.io/installer.sig -O - -q | tr -d '\n' > installer.sig
-    - php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');"
-    - php -r "if (hash_file('SHA384', 'composer-setup.php') === file_get_contents('installer.sig')) { echo 'Installer verified'; } else { echo 'Installer corrupt'; unlink('composer-setup.php'); } echo PHP_EOL;"
-    - php composer-setup.php
-    - php -r "unlink('composer-setup.php'); unlink('installer.sig');"
+    - curl -sS https://getcomposer.org/installer | php
     - php composer.phar install
