--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "url": "https://gitlab.com/librewiki/Liberty-MW-Skin/issues"
   },
   "homepage": "https://gitlab.com/librewiki/Liberty-MW-Skin#README",
-  "dependencies": {
+  "devDependencies": {
     "eslint": "^4.1.0",
     "eslint-config-wikimedia": "^0.4.0"
   }
