--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "git+ssh://git@gitlab.com/librewiki/Liberty-MW-Skin.git"
   },
-  "author": "Akaza Akari",
+  "author": "SEE AUTHOR IN <AUTHORS.txt>",
   "license": "GPL-3.0",
   "bugs": {
     "url": "https://gitlab.com/librewiki/Liberty-MW-Skin/issues"
