--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "ESLint for Developers.",
   "main": "eslint.js",
   "scripts": {
+    "build": "webpack",
     "test": "exit 0;"
   },
   "repository": {
@@ -17,7 +18,14 @@
   },
   "homepage": "https://gitlab.com/librewiki/Liberty-MW-Skin#README",
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-eslint": "^8.0.2",
+    "babel-loader": "^7.1.2",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "eslint": "^4.1.0",
-    "eslint-config-wikimedia": "^0.4.0"
+    "eslint-config-wikimedia": "^0.4.0",
+    "webpack": "^3.8.1"
   }
 }
