--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "ESLint for Developers.",
   "main": "eslint.js",
   "scripts": {
-    "build": "webpack",
+    "build": "rm -r dist && webpack",
     "test": "exit 0;",
     "lint": "eslint js"
   },
