Fix phpcs, update composer components

--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
 	"description": "Liberty MediaWiki Skin",
 	"license": "GPL-3.0+",
 	"require-dev": {
-		"mediawiki/mediawiki-codesniffer": "0.9.0"
+		"mediawiki/mediawiki-codesniffer": ">=0.9.0"
 	},
     "scripts": {
 		"test": [
