--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://gitlab.com/librewiki/Liberty-MW-Skin#README",
   "devDependencies": {
     "eslint": "^4.1.0",
-    "eslint-config-wikimedia": "^0.4.0"
+    "eslint-config-wikimedia": "^0.4.0",
+    "eslint-plugin-json" : "^1.4.0"
   }
 }
