--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,7 @@ eslint:
   image: node:latest
   stage: lint
   script:
-    - npm install -g eslint eslint-config-wikimedia
+    - npm install -g eslint eslint-config-wikimedia eslint-plugin-json
     - eslint js --ignore-pattern 'lib/'
   cache:
     paths:
