--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -13,6 +13,8 @@ jobs:
           php-version: '7.4'
           tools: composer:v2
 
+      - run: composer install
+
       - run: composer test
 
   eslint:
