--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git+ssh://git@gitlab.com/librewiki/Liberty-MW-Skin.git"
   },
   "author": "SEE AUTHOR IN <AUTHORS.txt>",
-  "license": "GPL-3.0",
+  "license": "GPL-3.0-or-later",
   "bugs": {
     "url": "https://gitlab.com/librewiki/Liberty-MW-Skin/issues"
   },
