--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -4,13 +4,13 @@ on: [pull_request, push]
 jobs:
   phpcs:
     name: Run phpcs
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v2
 
       - uses: shivammathur/setup-php@v2
         with:
-          php-version: '7.4'
+          php-version: '8.1'
           tools: composer:v2
 
       - run: composer install
@@ -22,5 +22,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - run: npm install --location=global eslint eslint-config-wikimedia eslint-plugin-json
+    
+    - uses: actions/setup-node@v3
+      with:
+        node-version: 18.x
+
+    - run: npm install --location=global eslint@^8.0.0 eslint-config-wikimedia eslint-plugin-json
     - run: eslint js --ignore-pattern 'lib/'
