--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,20 @@
 {
 	"name": "librewiki/liberty-mw-skin",
+	"version": "1.13.8",
 	"description": "Liberty MediaWiki Skin",
 	"license": "GPL-3.0+",
 	"require-dev": {
 		"mediawiki/mediawiki-codesniffer": ">=0.9.0"
 	},
-    "scripts": {
+	"scripts": {
 		"test": [
 			"phpcs -p -s"
 		],
 		"fix": "phpcbf"
+	},
+	"config": {
+		"allow-plugins": {
+			"dealerdirect/phpcodesniffer-composer-installer": true
+		}
 	}
 }
