--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,3 +1,4 @@
+---
 name: "Lint code"
 on: [pull_request, push]
 
@@ -6,24 +7,29 @@ jobs:
     name: Run phpcs
     runs-on: ubuntu-22.04
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-      - uses: shivammathur/setup-php@v2
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
         with:
           php-version: '8.1'
           tools: composer:v2
 
       - run: composer install
 
-      - run: composer test
+      - name: Excute test
+        run: composer test
 
   eslint:
     name: Run eslint
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout code
+      uses: actions/checkout@v4
     
-    - uses: actions/setup-node@v3
+    - name: Setup node
+      uses: actions/setup-node@v3
       with:
         node-version: 18.x
 
