--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
 	"name": "librewiki/liberty-mw-skin",
 	"version": "1.13.8",
 	"description": "Liberty MediaWiki Skin",
-	"license": "GPL-3.0+",
+	"license": "GPL-3.0-or-later",
 	"require-dev": {
 		"mediawiki/mediawiki-codesniffer": ">=0.9.0"
 	},
